Modified alexander versions to match new sdk